--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
     </head>
     <body>
+        <div th:replace="~{/fragments/fragment-entete :: fragment-entete}"></div>
         <h1>ISS</h1>
         <div id="heureDate"></div>
         <div id="contenaire">
@@ -28,6 +28,7 @@
         </div>
         <h2>Adresse actuelle : </h2>
         <div id="adresseISS"></div>
+        <div th:replace="~{/fragments/fragment-piedpage :: fragment-piedpage}"></div>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
         <script src="./scripts/app.js" type="module" defer></script>
