--- a/bin/main/templates/index.html
+++ b/bin/main/templates/index.html
@@ -4,6 +4,7 @@
         <title>Position ISS en direct</title>
         <link rel="icon" type="image/vnd.icon" href="/images/IconIss.png">
         <link rel="stylesheet" href="./styles/style.css">
+        <link rel="stylesheet" href="./styles/index.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <meta charset="UTF-8">
